# nuwa

./: README_zh.md  TODO.md  pyproject.toml  tmp_notes.md
docs/: README.md  api_reference.md  architecture_design.md  index.md  quickstart.md
docs/zh/: README.md  api_reference.md  architecture_design.md  index.md  quickstart.md
src/nuwa/: __init__.py  _image.py  _plan.py  agent_group.py  alarm.py  base.py  chat.py  embeddings.py  llm.py  multi_agent.py  qdrant.py  re_act.py  react_agent.py  scheduling_tools.py  search.py  tool.py  vector.py  vector_store.py  web_search_tools.py
src/nuwa/storages/: __init__.py  base.py  local_conversation_storage.py  vector_backed_storage.py
tests/: test_alarm.py  test_re_act.py  test_search.py  test_tool.py
