[project]
name = "nuwa"
version = "0.1.0"
description = "A deity capable of creating AI beings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.13.3",
    "httpx>=0.28.1",
    "json-repair>=0.54.2",
    "lxml>=6.0.2",
    "openai>=2.9.0",
    "oxymouse>=1.1.0",
    "playwright>=1.57.0",
    "playwright-stealth>=2.0.0",
    "qdrant-client>=1.16.1",
    "socksio>=1.0.0",
    "torch>=2.9.1",
    "urllib3>=1.26.20",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
]
